# learn-python-geopython-ml

./: .gitignore  00-getting-started.ipynb  README.md  pyproject.toml  requirements.txt
01-GEE/: 01.00-gee_getting-started.ipynb  01.01-gee_server-vs-client-local-objects.ipynb  01.02-gee_geemap.ipynb  01.03-gee_feature-data.ipynb  01.04-gee_images-and-image-collections.ipynb  01.05-gee_machine-learning-classifiers.ipynb  01.98-extra-exercises.ipynb
01-GEE/data/: boundary.geojson  boundary_a.geojson  psa-geoshape-odk-020426.geojson  psa_geopts_odk_021026-edited.csv  psa_geopts_odk_021026-original.csv  psa_geopts_odk_021026-wkt.csv  training_polygons.geojson
02-GeoPython/: 02.00-geopython_getting-started.ipynb  02.01-geopython_from-gee-to-just-python.ipynb  02.02-geopython_leafmap.ipynb  02.97-geopython_cheat-sheet.ipynb  02.98-geopython_exercises-a.ipynb  02.98-geopython_exercises-b.ipynb
03-GeoML/: 03.00-geoml_scikit-learn.ipynb  03.01.01-geoml_scikit-learn-classifiers_knn.ipynb  03.01.02-geoml_scikit-learn-classifiers_svm.ipynb  03.01.03-geoml_scikit-learn-classifiers_dt.ipynb  03.01.04-geoml_scikit-learn-classifiers_rf.ipynb  03.03-geoml_scikit-learn-comparing-different-classifiers.ipynb  03.04-geoml_scikit-learn-land-cover-mapping.ipynb
03-GeoML/data/: boundary_ml.geojson  data.txt  training_areas.geojson  (+1 more)
04-GeoAI/: 04.00-geoai.ipynb  04.01-geoai_downloading-data.ipynb  04.02-geoai_building-footprint-extraction.ipynb  04.03-geoai_car-detection.ipynb  04.04-geoai_ship-detection.ipynb  04.05-geoai_solar-panel-detection.ipynb  04.06-geoai_text-prompt.ipynb
(+19 files in other folders)
