[project]
name = "bnhr-geopython-ml-exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "earthengine-api>=1.7.15",
    "geemap>=0.37.1",
    "geoai-py>=0.31.1",
    "geopandas>=1.1.2",
    "jupyterlab>=4.5.5",
    "leafmap>=0.60.1",
    "marimo>=0.20.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "rasterio>=1.5.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "tensorflow>=2.20.0",
]
